# hopscotch

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: btreemap.rs  hashmap.rs  hashmaps.rs  hshashmap.rs
src/: lib.rs
