[package]
name = "hopscotch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmaps = "3.1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "hashmap"
harness = false

[[bench]]
name = "btreemap"
harness = false

[[bench]]
name = "hshashmap"
harness = false

[profile.release]
debug = 1

[profile.bench]
debug = 1
